fix: fix flex-wrap bug on services section

--- a/style.css
+++ b/style.css
@@ -1019,7 +1019,6 @@ p{
     display: flex;
     flex-direction: row;
     justify-content: start;
-    flex-wrap: wrap;
   }
   
   .container-services .title-subtitle{
